# awssyncer

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  awssyncer.cc  docker_startup.sh  filesystem_dirt.cc  filesystem_dirt.h  oneoffcopy.sh
src/: aws_command_runner.cc  aws_command_runner.h  aws_command_runner_test.cc  awssyncer.cc  command_runner.cc  command_runner.h  filesystem_dirt.cc  filesystem_dirt.h  filesystem_dirt_test.cc  filtering_inotify_poller.cc  filtering_inotify_poller.h  filtering_inotify_poller_test.cc  inotify_poller.cc  inotify_poller.h  multiple_command_runner.cc  multiple_command_runner.h  nonrecursive_inotify_poller.cc  nonrecursive_inotify_poller.h  periodic_filesystem_dirtier.cc  periodic_filesystem_dirtier.h  posix_command_runner.cc  posix_command_runner.h  recursive_inotify_poller.cc  recursive_inotify_poller.h
